[package]
name = "raffine"
version = "0.1.0"
edition = "2021"
authors = ["zwishingbjfu@gmail.com"]
description = "A 2D affine transformation library for Rust"
license = "MIT"
repository = "https://gitee.com/zhangwishing/raffine"
keywords = ["affine", "transformation", "matrix", "2d", "geometry"]
categories = ["graphics", "mathematics", "science"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
approx = "0.5"

[features]
default = []
parallel = ["dep:rayon"]

[dependencies.rayon]
version = "1.7"
optional = true

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "image_transformation"
path = "examples/image_transformation.rs"
