[package]
name = "raffine"
version = "0.2.0"
edition = "2021"
authors = ["zwishing <zwishingbjfu@gmail.com>"]
description = "A 2D affine transformation library for Rust, inspired by Python's affine package."
license = "MIT"
repository = "https://github.com/zwishing/raffine"
homepage = "https://github.com/zwishing/raffine"
documentation = "https://docs.rs/raffine"
keywords = ["affine", "transformation", "matrix", "geometry", "gis"]
categories = ["graphics", "mathematics", "science::geo"]
readme = "README.md"
rust-version = "1.70"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
approx = "0.5"
serde_json = "1"
