[package]
name = "raffine"
version = "0.3.0"
edition = "2021"
authors = ["zwishing <zwishingbjfu@gmail.com>"]
description = "A 2D affine transformation library for Rust, inspired by Python's affine package."
license = "MIT"
repository = "https://github.com/zwishing/raffine"
homepage = "https://github.com/zwishing/raffine"
documentation = "https://docs.rs/raffine"
keywords = ["affine", "transformation", "matrix", "geometry", "gis"]
categories = ["graphics", "mathematics", "science::geo"]
readme = "README.md"
rust-version = "1.83"

[features]
default = []
ndarray = ["dep:ndarray"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.12"
ndarray = { version = "0.16", optional = true }

[dev-dependencies]
approx = "0.5"
serde_json = "1"
ndarray = "0.16"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "transform"
harness = false
required-features = ["ndarray"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
